<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/LL_P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="20dp"
                android:text="@string/Titulo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/LL_L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_origen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/tvl_origen"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_destino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:text="@string/tvl_destino"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_SP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/RG_origen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="20dp"
                    android:checkedButton="@id/RBO1">

                    <RadioButton
                        android:id="@+id/RBO1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/op1"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/RBO2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/op2"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/RBO3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/op3"
                        android:textColor="@color/black" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/RG_destino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="80dp"
                    android:checkedButton="@id/RBD1">

                    <RadioButton
                        android:id="@+id/RBD1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/op1"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/RBD2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/op2"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/RBD3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/op3"
                        android:textColor="@color/black" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/et_valorAConvertir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_input"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/brown" />

            <Button
                android:id="@+id/Boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/BT_boton" />

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tvl_resultado"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>